Some controller visual cleanup and major fix for chrome on ios.

--- a/controller/controller.css
+++ b/controller/controller.css
@@ -211,6 +211,8 @@ a > .fancy-box:hover, a.fancy-box:hover {
   justify-content: space-evenly;
   align-items: flex-start;
   padding-top: 0.3rem;
+  position: fixed;
+  bottom: 0;
 }
 
 .icon {
@@ -253,13 +255,15 @@ a > .fancy-box:hover, a.fancy-box:hover {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  height: 100%;
+  /* height: calc(100% - 10.3rem); */
   max-width: 100%;
   width: 40rem;
   margin: 0 -0.5rem;
   border: 0.5rem solid var(--bg-color);
-  border-bottom-width: 4rem; 
+  border-bottom-width: 4rem;
   border-top-width: 100vh;
+  position: fixed;
+  bottom: 10.3rem;
 }
 .nav-page .row {
   justify-content: space-between;
@@ -271,7 +275,7 @@ a > .fancy-box:hover, a.fancy-box:hover {
   width: calc(50vw - 20rem);
   height: calc(100% - 10.3rem);
   z-index: -1;
-  position: absolute;
+  position: fixed;
   bottom: 10.3rem;
 }
 .left.side-box {
@@ -305,7 +309,7 @@ a > .fancy-box:hover, a.fancy-box:hover {
   position: absolute;
   height: 0.5rem;
   border-radius: 0.25rem;
-  bottom: 0.625rem;
+  bottom: 0.5rem;
   pointer-events: none;
 }
 .slider-container .left {
@@ -319,8 +323,6 @@ a > .fancy-box:hover, a.fancy-box:hover {
 .slider-container .right {
   right: 0;
   background-color: rgba(8,8,8, 0.5);
-  height: 0.75rem;
-  bottom: 0.6rem;
 }
 
 input[type="range"] {
@@ -329,6 +331,7 @@ input[type="range"] {
   background: transparent;
   cursor: pointer;
   height: 1.5rem;
+  margin: 0;
 }
 input[type="range"]::-webkit-slider-runnable-track {
   height: 0.5rem;
@@ -453,13 +456,15 @@ input[type="range"]::-moz-range-thumb {
   overflow-y: auto;
   box-sizing: border-box;
   position: relative;
+  height: var(--save-scroll-height);
+  border-bottom: var(--save-scroll-bottom-height) solid var(--bg-color);
 }
-.scroll-containter .bottom-plug {
+.bottom-plug {
   position: absolute;
-  bottom: 0;
+  bottom: 7rem;
   width: 100%;
   background-color: var(--bg-color);
-  height: 0.5rem;
+  height: calc(var(--save-scroll-bottom-height) + 0.5rem);
 }
 .pref-list-item {
   font-size: 3rem;
